Add directives to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,3 +16,5 @@ export(xapian_dbValue_lower_bound)
 export(xapian_dbValue_upper_bound)
 export(xapian_dbsetMetadata)
 export(xapian_index)
+importFrom(Rcpp, evalCpp)
+useDynLib(RXapian)
