--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,6 @@ Description: More about what it does (maybe more than one line)
 License: GPL (>= 2)
 Imports: Rcpp (>= 0.12.4),
          checkmate (>= 1.5.1)
+Suggests:
+    testthat
 LinkingTo: Rcpp
