--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,16 @@
 Package: RXapian
 Type: Package
-Title: What the package does (short line)
+Title: R bindings for Xapian search engine library
 Version: 1.0
 Date: 2016-04-25
-Author: Your Name
-Maintainer: Your Name <your@email.com>
-Description: More about what it does (maybe more than one line)
+Author: Amanda Jayanetti
+Maintainer: Amanda Jayanetti <amandajayanetti@gmail.com>
+Description: This package provides an interface which facilitates convenient access to advanced indexing and retrieval operations offered by Xapian search engine library. For further information see http://getting-started-with-xapian.readthedocs.io/en/latest/index.html.
 License: GPL (>= 2)
-Imports: Rcpp (>= 0.12.4),
-         checkmate (>= 1.5.1)
+Imports:
+    Rcpp (>= 0.12.4),
+    checkmate (>= 1.5.1)
 Suggests:
     testthat
 LinkingTo: Rcpp
+RoxygenNote: 5.0.1
