Update NAMESPACE to include xapian_delete

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,5 +17,6 @@ export(xapian_dbValue_upper_bound)
 export(xapian_dbsetMetadata)
 export(xapian_index)
 export(xapian_search)
+export(xapian_delete)
 importFrom(Rcpp, evalCpp)
 useDynLib(RXapian)
