--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,4 +18,5 @@ export(xapian_dbsetMetadata)
 export(xapian_index)
 export(xapian_search)
 importFrom(Rcpp, evalCpp)
+import(stringr)
 useDynLib(RXapian)
