--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(xapian_dbValue_freq)
 export(xapian_dbValue_lower_bound)
 export(xapian_dbValue_upper_bound)
 export(xapian_dbsetMetadata)
+export(xapian_delete)
+export(xapian_delete_by_term)
 export(xapian_index)
 export(xapian_search)
 importFrom(Rcpp, evalCpp)
