--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(xapian_dbValue_upper_bound)
 export(xapian_dbsetMetadata)
 export(xapian_index)
 export(xapian_search)
+export(xapian_delete)
 importFrom(Rcpp, evalCpp)
 import(stringr)
 useDynLib(RXapian)
